--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
         <div class="profile_name">
           Travis Barnes
           <div class="contact_info">
-            <img src="html_finalprojimages/envelope.png" alt="https://icons8.com/icon/124377/circled-envelope"/>
+            <img src="mail-297031_640.png"/>
           tBarnes@jeemail.com
         </div>
         <div style="clear:both;"></div>
         <div class="contact_info">
-          <img src="html_finalprojimages/phone.png" alt="https://icons8.com/icon/124377/circled-envelope"/>
+          <img src="phone-148955_640.png"/>
           +13456764598
 
         </div>
@@ -40,7 +40,7 @@
 
       <div>
           <h1>
-            Hi, I'm Travis Barnes </B>! <img src="html_finalprojimages/waving-hand.png" width="60px"/>
+            Hi, I'm Travis Barnes </B>! <img src="16-43-54-176_512.gif" width="60px"/>
           </h1>
           <p>
             I am a full stack developer with 2 years of experience in both application and presentation layers.
@@ -57,13 +57,13 @@
 
       <div class="all_skills">
         <div class="skill">
-          <img src="html_finalprojimages/html5.png"/>
+          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTYk594AhSKw5Eb3iHkPHs_XmpCqaRVgu0mvg&s"/>
           <h6>HTML</h6>
           <p>2 years experience</p>
         </div>  
 
         <div class="skill">
-          <img src="html_finalprojimages/js.jpeg"/>
+          <img src="https://static.vecteezy.com/system/resources/previews/027/127/463/non_2x/javascript-logo-javascript-icon-transparent-free-png.png"/>
           <h6>JavaScript</h6>
           <p>3 years experience</p>
         </div>  
