--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
         <div class="profile_name">
           Travis Barnes
           <div class="contact_info">
-            <img src="mail-297031_640.png"/>
+            <img src="https://cdn.pixabay.com/photo/2014/03/25/16/25/mail-297031_640.png"/>
           tBarnes@jeemail.com
         </div>
         <div style="clear:both;"></div>
         <div class="contact_info">
-          <img src="phone-148955_640.png"/>
+          <img src="https://cdn.pixabay.com/photo/2013/07/12/14/53/phone-148955_640.png"/>
           +13456764598
 
         </div>
@@ -40,7 +40,7 @@
 
       <div>
           <h1>
-            Hi, I'm Travis Barnes </B>! <img src="16-43-54-176_512.gif" width="60px"/>
+            Hi, I'm Travis Barnes </B>! <img src="https://cdn.pixabay.com/animation/2023/04/16/16/43/16-43-54-176_512.gif" width="60px"/>
           </h1>
           <p>
             I am a full stack developer with 2 years of experience in both application and presentation layers.
@@ -57,7 +57,7 @@
 
       <div class="all_skills">
         <div class="skill">
-          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTYk594AhSKw5Eb3iHkPHs_XmpCqaRVgu0mvg&s"/>
+          <img src="https://cdn.pixabay.com/photo/2018/05/08/21/28/html5-3384014_1280.png"/>
           <h6>HTML</h6>
           <p>2 years experience</p>
         </div>  
